Ругается на шаблон но все работает лол

--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -18,20 +18,21 @@
                 {% endif %}
               </div>
               {% if is_edit %}
-              <form action="{% url 'posts:post_edit' form.instance.id %}" method="post">
+                <form action="{% url 'posts:post_edit' form.instance.id %}" method="post">
               {% else %}
-              <form action="{% url 'posts:post_create' %}" method="post">
+                <form action="{% url 'posts:post_create' %}" method="post">
               {% endif %}
               {% csrf_token %}
               {% for field in form %}
-                <div class="fieldWrapper">
-                  <div class="form-group row my-3 p-3">
-                    {{ field.errors }}
-                    {{ field.label_tag }}
+                <div class="form-group row my-3 p-3">
+                  <label for="{{ field.id_for_label }}">
+                    {{ field.label }}
+                    {% if field.field.required %}
+                      <span class="required text-danger">*</span>
+                    {% endif %}
+                  </label>
                     {{ field }}
-                    <small id="id_text-help" class="form-text text-muted">Текст нового поста</small>
-                    <small id="id_group-help" class="form-text text-muted">Группа, к которой будет относиться пост</small>
-                  </div>
+                    <small>{{ field.help_text }}</small>
                 </div>
               {% endfor %}
               <div class="d-flex justify-content-end">
