--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block header %}Об авторе проекта{% endblock header %}
+{% block title %}Об авторе проекта{% endblock %}
 {% block content %}
 <h1>Добро пожаловать на страницу автора</h1>
 <p>
