--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block header %}Технологии{% endblock %}
+{% block title %}Технологии{% endblock %}
 {% block content %}
   <div class="row">
     <h1>Вот что я умею</h1>
