--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -3,9 +3,9 @@
 <html lang="ru"> 
   <head>
     <title>
-      {% block header %}
+      {% block title %}
         
-      {% endblock header %}
+      {% endblock title %}
     </title>  
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,9 +22,9 @@
       {% include 'includes/header.html' %}
       <div class="container py-5">
         <h1>
-          {% block title %}
+          {% block title1 %}
   
-          {% endblock title %}
+          {% endblock title1 %}
         </h1>
       </div>
       {% block content %}
