--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% block header %} Главная страница {% endblock header %}
-{% block title %}Последние обновления на сайте{% endblock %}
+{% block title %} Главная страница {% endblock %}
+{% block title1 %}Последние обновления на сайте{% endblock %}
 {% block content %}
   {% for post in page_obj %}
       <div class="container py-5">    
