--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
-{% block header %}
-  {{ group.title }}
-{% endblock header %}
 {% block title %}
-  Записи сообщества {{ group.title }} 
+  {{ group.title }}
 {% endblock title %}
+{% block title1 %}
+  <h1> {{ group.title }} </h1>
+  <p>{{ group.description }}</p>
+{% endblock title1 %}
 {% block content %}
   {% for post in posts %}
     <div class="container py-5">    
