--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% load  static %}
-{% block header %}
+{% block title %}
   Профайл пользователя {{ user }} 
-{% endblock header %}    
+{% endblock title %}    
 {% block content %}
       <div class="container py-5">        
         <h1>Все посты пользователя {{ user.username }}</h1>
