--- a/yatube/templates/registration/login.html
+++ b/yatube/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block header %}Войти{% endblock %}
+{% block title %}Войти{% endblock %}
 {% block content %}
 {% load user_filters %}
   <div class="row justify-content-center">
