--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -22,7 +22,7 @@
             <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
           </p>
           <p>
-          {% if post.group != Null %}
+          {% if post.group %}
             <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
           {% endif %} 
           </p>
