--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -7,7 +7,7 @@
   <p>{{ group.description }}</p>
 {% endblock title1 %}
 {% block content %}
-  {% for post in posts %}
+  {% for post in page_obj %}
     <div class="container py-5">    
       <ul>
         <li>
